# 250710clichat

./: README.md
250710chatsys/: MultiPersonaChat.spec  config.json  config_session_command.py  debate.py  learning_manager.py  main.py  persona.py  personas.json  pyproject.toml  ui.py
