[project]
name = "250710chatsys"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
# ▼▼▼ 修正箇所 ▼▼▼
requires-python = ">=3.10,<3.12"
# ▲▲▲ 修正箇所 ▲▲▲
dependencies = [
    "pyside6 (==6.4.3)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
